<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wakeup">wake up</string>
    <string name="alarm_check_box">set alarm</string>
    <color name="red">#FFFF4444</color>
    <string name="set_alarm">add</string>
    <string name="alarm_in_silent_mode_summary">alarm will be triggered in silent mode</string>
    <string name="alarm_in_silet_mode_title">silent mode</string>
    <string name="alarm_in_silent_mode_title">silent mode</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="alarm_volume_summary">Set the volume of alarms</string>
    <string name="snooze_duration_title">Snooze duration</string>

    <!-- Entries listed in the ListPreference when invoking the snooze duration
         preference. -->
    <string-array name="snooze_duration_entries">
      <item>5 minutes</item>
      <item>10 minutes</item>
      <item>15 minutes</item>
      <item>20 minutes</item>
      <item>25 minutes</item>
      <item>30 minutes</item>
    </string-array>

    <string-array name="snooze_duration_values">
      <item>5</item>
      <item>10</item>
      <item>15</item>
      <item>20</item>
      <item>25</item>
      <item>30</item>
    </string-array>
    <string name="default_ringtone_setting_title">Set default ringtone</string>
    
</resources>
