<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <CheckBoxPreference
        android:key="alarm_in_silent_mode"
        android:summary="@string/alarm_in_silent_mode_summary"
        android:title="@string/alarm_in_silent_mode_title" /> 
        
    
    <VolumePreference
        android:dialogTitle="@string/alarm_volume_title"
        android:persistent="false"
        android:streamType="alarm"
        android:summary="@string/alarm_volume_summary"
        android:title="@string/alarm_volume_title" />

    <ListPreference
        android:defaultValue="10"
        android:dialogTitle="@string/snooze_duration_title"
        android:entries="@array/snooze_duration_entries"
        android:entryValues="@array/snooze_duration_values"
        android:key="snooze_duration"
        android:title="@string/snooze_duration_title" />
    
    
</PreferenceScreen>
